--- a/thomasdevri_es/staff/markdown/you/might/have/realized/by/now/that/this/is/not/a/simple/surface/level/directory/of/documentation/my/dear/brother__/_/Rather/,.md
+++ b/thomasdevri_es/staff/markdown/you/might/have/realized/by/now/that/this/is/not/a/simple/surface/level/directory/of/documentation/my/dear/brother__/_/Rather/,.md
@@ -3,5 +3,5 @@
 What is this dot notation in the url pattern, you wonder. What is he doing???
 Well, you see, thomas, you might have realized by that this is not a simple
 surface level directory of documentation my dear brother. Rather
-<a href="/staff/doc/you.might.have.realized.by.now.that.this.is.not.a.simple.surface.level.directory.of.documentation.my.dear.brother__._.Rather.,/"
+<a href="/staff/doc/you.might.have.realized.by.now.that.this.is.not.a.simple.surface.level.directory.of.documentation.my.dear.brother__._.Rather.,.it/"
     >,</a>
